kubernetes/clusters/vcenter/infrastructure/traefik/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lvic-techlab.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`innovation.lvic-techlab.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: webapp-frontend
          port: 3001
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docs
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`docs.lvic-techlab.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: docs
          port: 8000
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: awx
  namespace: awx
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`awx.lvic-techlab.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: awx-service
          port: 80
  tls: {}
